Computes the VarOp's result type from its operand type, if not overridden