@@ -1989,7 +1989,7 @@ public sealed abstract class CoreOp extends ExternalizableOp {
         public static final String ATTRIBUTE_NAME = NAME + ".name";
 
         final String varName;
-        final TypeElement resultType;
+        final VarType resultType;
 
         public static VarOp create(ExternalizedOp def) {
             if (def.operands().size() != 1) {
@@ -2008,14 +2008,19 @@ public sealed abstract class CoreOp extends ExternalizableOp {
             super(def);
 
             this.varName = varName;
-            this.resultType = def.resultType();
+            this.resultType = (VarType) def.resultType();
         }
 
         VarOp(VarOp that, CopyContext cc) {
             super(that, cc);
 
             this.varName = that.varName;
-            this.resultType = that.resultType;
+            this.resultType = that.isResultTypeOverridable()
+                    ? VarType.varType(initOperand().type()) : that.resultType;
+        }
+
+        boolean isResultTypeOverridable() {
+            return resultType().valueType().equals(initOperand().type());
         }
 
         @Override
@@ -2045,16 +2050,20 @@ public sealed abstract class CoreOp extends ExternalizableOp {
             return Collections.unmodifiableMap(m);
         }
 
+        public Value initOperand() {
+            return operands().getFirst();
+        }
+
         public String varName() {
             return varName;
         }
 
-        public TypeElement varType() {
-            return ((VarType) resultType).valueType();
+        public TypeElement varValueType() {
+            return resultType.valueType();
         }
 
         @Override
-        public TypeElement resultType() {
+        public VarType resultType() {
             return resultType;
         }
     }
@@ -2077,19 +2086,29 @@ public sealed abstract class CoreOp extends ExternalizableOp {
             super(name, operands);
         }
 
-        public VarOp varOp() {
-            // @@@ At a high-level a Var value occur as a BlockArgument.
-            // Lowering should remove such cases and the var definition should emerge
-            // @@@ This method is used when transforming to pure SSA
-            Result variable = (Result) operands().get(0);
-            return (VarOp) variable.op();
+        public Value varOperand() {
+            return operands().getFirst();
         }
 
-        static Value checkIsVarOp(Value varValue) {
+        public VarType varType() {
+            return (VarType) varOperand().type();
+        }
+
+        public VarOp varOp() {
+            if (!(varOperand() instanceof Result varValue)) {
+                throw new IllegalStateException("Variable access to block parameter: " + varOperand());
+            }
+
+            // At a high-level a variable value can be a BlockArgument.
+            // Lowering should remove such cases and the var declaration should emerge
+            // This method is primarily used when transforming to pure SSA
+            return (VarOp) varValue.op();
+        }
+
+        static void checkIsVarOp(Value varValue) {
             if (!(varValue.type() instanceof VarType)) {
                 throw new IllegalArgumentException("Value's type is not a variable type: " + varValue);
             }
-            return varValue;
         }
 
         /**
@@ -2129,8 +2148,7 @@ public sealed abstract class CoreOp extends ExternalizableOp {
 
             @Override
             public TypeElement resultType() {
-                VarType vt = (VarType) operands().get(0).type();
-                return vt.valueType();
+                return varType().valueType();
             }
         }
 
@@ -2169,6 +2187,10 @@ public sealed abstract class CoreOp extends ExternalizableOp {
             VarStoreOp(Value varValue, Value v) {
                 super(NAME,
                         List.of(varValue, v));
+            }
+
+            public Value storeOperand() {
+                return operands().get(1);
             }
 
             @Override
